{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 229,
  "lineage": "b2220c7f-9c1a-0283-f1d5-18c80ba0a4a1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ass-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:559436495016:instance/i-0735228a73f14ea8d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0735228a73f14ea8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "euwest-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e074b88bab534170",
            "private_dns": "ip-10-0-1-59.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.59",
            "public_dns": "ec2-34-242-92-131.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.242.92.131",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035b05a5337a53c12",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-031ca613898920bb0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3c6305e5ab1782e",
            "tags": {
              "Name": "ass-1",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "ass-1",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031ca613898920bb0"
            ]
          },
          "dependencies": [
            "aws_security_group.ass-load_balancer_sg",
            "aws_security_group.ass-security-grp-rule",
            "aws_subnet.ass-public-subnet1-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ass-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:559436495016:instance/i-0282de953ea9bcc42",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0282de953ea9bcc42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "euwest-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-024f366e375c3a9e5",
            "private_dns": "ip-10-0-2-92.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.92",
            "public_dns": "ec2-34-255-181-107.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.255.181.107",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b14d4e69cb59ea69",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-031ca613898920bb0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00f7b5bbba6935844",
            "tags": {
              "Name": "ass-2",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "ass-2",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031ca613898920bb0"
            ]
          },
          "dependencies": [
            "aws_security_group.ass-load_balancer_sg",
            "aws_security_group.ass-security-grp-rule",
            "aws_subnet.ass-public-subnet2-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ass-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0905a3c97561e0b69",
            "arn": "arn:aws:ec2:eu-west-1:559436495016:instance/i-017f0441ab95176df",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-017f0441ab95176df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "euwest-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e8bca65c02ca5d39",
            "private_dns": "ip-10-0-1-162.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.162",
            "public_dns": "ec2-54-195-113-130.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.195.113.130",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0545266bd0522548f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-031ca613898920bb0"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3c6305e5ab1782e",
            "tags": {
              "Name": "ass-3",
              "source": "terraform"
            },
            "tags_all": {
              "Name": "ass-3",
              "source": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-031ca613898920bb0"
            ]
          },
          "dependencies": [
            "aws_security_group.ass-load_balancer_sg",
            "aws_security_group.ass-security-grp-rule",
            "aws_subnet.ass-public-subnet1-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ass_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:559436495016:internet-gateway/igw-001ddff9e532bfc72",
            "id": "igw-001ddff9e532bfc72",
            "owner_id": "559436495016",
            "tags": {
              "Name": "ass_internet_gateway"
            },
            "tags_all": {
              "Name": "ass_internet_gateway"
            },
            "vpc_id": "vpc-0cffea4aace65fa22"
          },
          "dependencies": [
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ass-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:loadbalancer/app/ass-load-balancer/a0e26f2dc5d36dcb",
            "arn_suffix": "app/ass-load-balancer/a0e26f2dc5d36dcb",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "ass-load-balancer-371385213.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:loadbalancer/app/ass-load-balancer/a0e26f2dc5d36dcb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ass-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-00243c0dfc1f30125"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00f7b5bbba6935844"
              },
              {
                "subnet_id": "subnet-0d3c6305e5ab1782e"
              }
            ],
            "subnets": [
              "subnet-00f7b5bbba6935844",
              "subnet-0d3c6305e5ab1782e"
            ],
            "vpc_id": "vpc-0cffea4aace65fa22",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_instance.ass-1",
            "aws_instance.ass-2",
            "aws_instance.ass-3",
            "aws_security_group.ass-load_balancer_sg",
            "aws_security_group.ass-security-grp-rule",
            "aws_subnet.ass-public-subnet1-assoc",
            "aws_subnet.ass-public-subnet2-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ass-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:listener/app/ass-load-balancer/a0e26f2dc5d36dcb/37d3702686c98996",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:targetgroup/ass-target-group/2769ccd75bb00624",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:listener/app/ass-load-balancer/a0e26f2dc5d36dcb/37d3702686c98996",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:loadbalancer/app/ass-load-balancer/a0e26f2dc5d36dcb",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.ass-1",
            "aws_instance.ass-2",
            "aws_instance.ass-3",
            "aws_lb.ass-load-balancer",
            "aws_lb_target_group.ass-target-group",
            "aws_security_group.ass-load_balancer_sg",
            "aws_security_group.ass-security-grp-rule",
            "aws_subnet.ass-public-subnet1-assoc",
            "aws_subnet.ass-public-subnet2-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "ass-listener-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:targetgroup/ass-target-group/2769ccd75bb00624",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:listener-rule/app/ass-load-balancer/a0e26f2dc5d36dcb/37d3702686c98996/719eba38279d8adf",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:listener-rule/app/ass-load-balancer/a0e26f2dc5d36dcb/37d3702686c98996/719eba38279d8adf",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:listener/app/ass-load-balancer/a0e26f2dc5d36dcb/37d3702686c98996",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.ass-1",
            "aws_instance.ass-2",
            "aws_instance.ass-3",
            "aws_lb.ass-load-balancer",
            "aws_lb_listener.ass-listener",
            "aws_lb_target_group.ass-target-group",
            "aws_security_group.ass-load_balancer_sg",
            "aws_security_group.ass-security-grp-rule",
            "aws_subnet.ass-public-subnet1-assoc",
            "aws_subnet.ass-public-subnet2-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ass-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:targetgroup/ass-target-group/2769ccd75bb00624",
            "arn_suffix": "targetgroup/ass-target-group/2769ccd75bb00624",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:targetgroup/ass-target-group/2769ccd75bb00624",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ass-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cffea4aace65fa22"
          },
          "dependencies": [
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ass-target-group-attachement1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:targetgroup/ass-target-group/2769ccd75bb00624-20240120110501971300000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:targetgroup/ass-target-group/2769ccd75bb00624",
            "target_id": "i-0735228a73f14ea8d"
          },
          "dependencies": [
            "aws_instance.ass-1",
            "aws_lb_target_group.ass-target-group",
            "aws_security_group.ass-load_balancer_sg",
            "aws_security_group.ass-security-grp-rule",
            "aws_subnet.ass-public-subnet1-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ass-target-group-attachement2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:targetgroup/ass-target-group/2769ccd75bb00624-20240120110501773100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:targetgroup/ass-target-group/2769ccd75bb00624",
            "target_id": "i-0282de953ea9bcc42"
          },
          "dependencies": [
            "aws_instance.ass-2",
            "aws_lb_target_group.ass-target-group",
            "aws_security_group.ass-load_balancer_sg",
            "aws_security_group.ass-security-grp-rule",
            "aws_subnet.ass-public-subnet2-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ass-target-group-attachement3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:targetgroup/ass-target-group/2769ccd75bb00624-20240120110502022100000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:559436495016:targetgroup/ass-target-group/2769ccd75bb00624",
            "target_id": "i-017f0441ab95176df"
          },
          "dependencies": [
            "aws_instance.ass-3",
            "aws_lb_target_group.ass-target-group",
            "aws_security_group.ass-load_balancer_sg",
            "aws_security_group.ass-security-grp-rule",
            "aws_subnet.ass-public-subnet1-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "ass-network_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:559436495016:network-acl/acl-06a2cacf75f8a9a4d",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06a2cacf75f8a9a4d",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "559436495016",
            "subnet_ids": [
              "subnet-00f7b5bbba6935844",
              "subnet-0d3c6305e5ab1782e"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0cffea4aace65fa22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.ass-public-subnet1-assoc",
            "aws_subnet.ass-public-subnet2-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ass-route-table-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:559436495016:route-table/rtb-04f00de7bcd7eaf0b",
            "id": "rtb-04f00de7bcd7eaf0b",
            "owner_id": "559436495016",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001ddff9e532bfc72",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ass-route-table-public"
            },
            "tags_all": {
              "Name": "ass-route-table-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4aace65fa22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ass_internet_gateway",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass-public-route1-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0d550e732a0eb2f",
            "route_table_id": "rtb-04f00de7bcd7eaf0b",
            "subnet_id": "subnet-0d3c6305e5ab1782e"
          },
          "dependencies": [
            "aws_internet_gateway.ass_internet_gateway",
            "aws_route_table.ass-route-table-public",
            "aws_subnet.ass-public-subnet1-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ass-public-route2-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0f54442ed63fbb9",
            "route_table_id": "rtb-04f00de7bcd7eaf0b",
            "subnet_id": "subnet-00f7b5bbba6935844"
          },
          "dependencies": [
            "aws_internet_gateway.ass_internet_gateway",
            "aws_route_table.ass-route-table-public",
            "aws_subnet.ass-public-subnet2-assoc",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ass-load_balancer_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:559436495016:security-group/sg-00243c0dfc1f30125",
            "description": "security group for the load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-00243c0dfc1f30125",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ass-load_balancer_sg",
            "name_prefix": "",
            "owner_id": "559436495016",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cffea4aace65fa22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ass-security-grp-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:559436495016:security-group/sg-031ca613898920bb0",
            "description": "Allow SSH, HTTP, and HTTPS inbound traffic for public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-031ca613898920bb0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00243c0dfc1f30125"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00243c0dfc1f30125"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh_http_https",
            "name_prefix": "",
            "owner_id": "559436495016",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ass-security-grp-rule"
            },
            "tags_all": {
              "Name": "ass-security-grp-rule"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cffea4aace65fa22"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ass-load_balancer_sg",
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ass-public-subnet1-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:559436495016:subnet/subnet-0d3c6305e5ab1782e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3c6305e5ab1782e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "559436495016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ass-public-subnet1-assoc"
            },
            "tags_all": {
              "Name": "ass-public-subnet1-assoc"
            },
            "vpc_id": "vpc-0cffea4aace65fa22"
          },
          "dependencies": [
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ass-public-subnet2-assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:559436495016:subnet/subnet-00f7b5bbba6935844",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00f7b5bbba6935844",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "559436495016",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ass-public-subnet2-assoc"
            },
            "tags_all": {
              "Name": "ass-public-subnet2-assoc"
            },
            "vpc_id": "vpc-0cffea4aace65fa22"
          },
          "dependencies": [
            "aws_vpc.ass_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ass_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:559436495016:vpc/vpc-0cffea4aace65fa22",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f92d788be63dfc01",
            "default_route_table_id": "rtb-02d29d6f42d648387",
            "default_security_group_id": "sg-097558ae03b5954a9",
            "dhcp_options_id": "dopt-0a6532e5db76755ff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cffea4aace65fa22",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d29d6f42d648387",
            "owner_id": "559436495016",
            "tags": {
              "Name": "ass_vpc"
            },
            "tags_all": {
              "Name": "ass_vpc"
            }
          }
        }
      ]
    }
  ]
}